--- a/static/css/index.css
+++ b/static/css/index.css
@@ -29,6 +29,7 @@ body {
 
 
 .publication-title {
+  font-size: '5px';
 }
 
 .publication-banner {
@@ -80,6 +81,7 @@ body {
 
 .author-block {
   display: inline-block;
+  font-size: 30px;
 }
 
 .publication-banner img {
